correct some errors

--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,10 @@
 .main .right_section{
     flex: 2;
 }
+
+
+@media only screen and (max-width: 992px){
+    .main{
+        flex-direction: column;
+    }
+}
