--- a/src/components/delegation/delegation.css
+++ b/src/components/delegation/delegation.css
@@ -5,4 +5,38 @@
     align-items: center;
     text-align: left;
     justify-content: space-around;
+    margin-bottom: 20px;
+}
+
+.delegation_container .undelegate_btn{
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    border: 1px solid black;
+    background-color: transparent;
+}
+
+
+.delegation_section .error_section,
+.delegation_section .success_section{
+    text-align: center;
+}
+
+.delegation_section .error_section>*,
+.delegation_section .success_section>*
+{
+    display: block;
+    margin: 30px 0px;
+}
+
+.delegation_section .redirect_btn{
+    padding: 20px 60px;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    text-decoration: none;
 }
