--- a/src/components/delegation_main/delegation_main.css
+++ b/src/components/delegation_main/delegation_main.css
@@ -43,3 +43,10 @@
     cursor: pointer;
     text-decoration: none;
 }
+
+@media only screen and (max-width: 992px){
+    .delegation_section{
+        margin: 30px;
+        min-height: 100%;
+    }
+}
