--- a/src/components/delegate_main/delegate_main.css
+++ b/src/components/delegate_main/delegate_main.css
@@ -36,3 +36,11 @@
     display: block;
     margin: 30px 0px;
 }
+
+
+@media only screen and (max-width: 992px){
+    .delegate_section{
+        margin: 30px;
+        min-height: 100%;
+    }
+}
