--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -34,35 +34,20 @@
     position:relative;
     margin: 0 20px;
     font-size: 17px;
+    text-align: center;
 }
-
-.navbar .menu_navbar>li:after {
-  color: white;
-  font-size: 13px;
-  padding: 9px;
-  position: absolute;
-  bottom: -20px;
-  right: 50%;
-  transform: translateX(50%);
-  height: 10px;
-  width: 10px;
-  border-radius: 50%;
-  background-color: black;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.navbar .menu_navbar>li:first-child:after{
-    content: "1";
-}
-.navbar .menu_navbar>li:nth-child(2):after{
-    content: "2";
-}
-.navbar .menu_navbar>li:nth-child(3):after{
-    content: "3";
-}
-.navbar .menu_navbar>li:last-child:after{
-    content: "4";
+.navbar .menu_navbar>li .numberSpan{
+    padding: 5px;
+    background-color: grey;
+    width: 25px;
+    height: 25px;
+    margin: 5px auto;
+    border-radius: 50%;
+    color: white;
+    display: flex;
+    justify-content: center;
+    font-size: 13px;
+    align-items: center;
 }
 
 .menu_navbar>li a{
@@ -76,7 +61,7 @@
 }
 
 .navbar .btn_navbar{
-    padding: 23px 30px;
+    padding: 15px 18px;
     cursor: pointer;
     background-color: #000;
     color: #fff;
@@ -113,7 +98,7 @@
     .navbar.open .btn_navbar{
         display: block;
     }
-    .navbar .menu_navbar>li:after{
+    .navbar .menu_navbar>li .numberSpan{
         display: none;
     }
 }
