--- a/src/components/wrap_main/wrap_main.css
+++ b/src/components/wrap_main/wrap_main.css
@@ -61,8 +61,12 @@
 .wrap_section .success_section>*
 {
     margin: 20px 0px;
+    display: block;
 }
 
+.wrap_section .success_section>a{
+    text-decoration: none;
+}
 
 @media only screen and (max-width: 992px){
     .wrap_section{
