--- a/src/components/unwrap_main/unwrap_main.css
+++ b/src/components/unwrap_main/unwrap_main.css
@@ -53,6 +53,7 @@
 .unwrap_section .success_section>*
 {
     margin: 20px 0px;
+    display: block;
 }
 
 @media only screen and (max-width: 992px){
