--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -97,11 +97,10 @@
 
 .sidebar_container .claim_btn{
     display: block;
-    padding: 10px 20px;
+    padding: 16px;
     background-color: black;
     color: white;
-    font-size: 17px;
-    width: 200px;
+    width: 175px;
     margin: 0 auto;
     cursor: pointer;
 }
