--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -73,10 +73,12 @@
 }
 .statistics_section input[type="text"].inputtext{
     padding: 20px 10px;
-    width: 100%;
+    margin:4px  20px;
+    width: 90%;
     border-radius: 5px;
     border: 1px solid #CCC;
     font-size: 15px;
+
 }
 .statistics_section input[type="text"].inputtext:active,
 .statistics_section input[type="text"].inputtext:focus{
