--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -94,6 +94,7 @@
 .statistics_content .pending_rewards{
     margin:20px 0px;
     display: flex;
+    padding: 0px 20px;
     justify-content: space-between;
     align-items: center;
 }
